--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -124,6 +124,9 @@
          a:active {
          color: #ff6600;
          }
+		 h2 {
+         color:#ff6600;;
+         }
          .menu {
          clear:both;
          width:auto;
