--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -107,6 +107,9 @@
       font-size:13px;
       color:#ddd
       }
+	 h2 {
+	 color:#ff6600;;
+	 }	  
       h1 {
       color:#ddd;
       font-size:22px;
