--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -106,6 +106,9 @@
       width:auto;
       color:#ddd
       }
+	 h2 {
+	 color:#ff6600;;
+	 }	  	  
       h1 {
       color:#ddd;
       font-size:22px;
