--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -105,6 +105,9 @@
       width:auto;
       color:#ddd
       }
+	 h2 {
+	 color:#ff6600;;
+	 }	  	  
       h1 {
       color:#ddd;
       font-size:20px;
