--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -99,6 +99,9 @@
       width:auto;
       color:#ddd
       }
+	 h2 {
+	 color:#ff6600;;
+	 }	  	  
       h1 {
       color:#ddd;
       font-size:23px;
