--- a/mikrotik-dns-over-https-doh.html
+++ b/mikrotik-dns-over-https-doh.html
@@ -104,6 +104,9 @@
       width:auto;
       color:#ddd;
       }
+	 h2 {
+	 color:#ff6600;;
+	 }	  	  
       h1 {
       color:#ddd;
       font-size:20px;
