--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -108,6 +108,9 @@
       width:auto;
       color:#ddd
       }
+	 h2 {
+	 color:#ff6600;;
+	 }	  	  
       h1 {
       color:#ddd;
       font-size:22px;
