--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 	 <div id="show-login-menu">
 		 <button style="width:100px !important; padding:5px; margin:5px; font-weight:bold" onclick="callmodalLogin();showLogin()">Login</button>
 		 <button style="width:100px !important; padding:5px; margin:5px; font-weight:bold" onclick="callmodalLogin();showRegistration()">Sign Up</button>
-		 <span style="font-size:13px; font-weight:normal; color:#555">Single Login to access all my tools, join now, it's free :)</span>
+		 <span style="font-size:13px; font-weight:normal; color:#555">One Login to access all my tools, join now, it's free :)</span>
 	</div>	 
 		 <div id="homepage" class="hide">
          <button style="width:100px !important; padding:5px; margin:5px; font-weight:bold" id="signout">Logout</button>
